--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,8 @@
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
 .header {
     height: 11rem;
 
@@ -9,7 +14,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-
     }
 }
 
@@ -17,7 +21,10 @@
     display: flex;
     height: 33rem;
     margin-top: 2.2rem;
-    // border: 1px blue solid;
+
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
 
 .box {
@@ -30,5 +37,7 @@
     height: 4rem;
     display: flex;
     justify-content: center;
-    align-items: center;
+    border: 1px solid blue;
+
+    @media only screen and (max-width: $bp-medium) {}
 }
